--- a/run_course.Rmd
+++ b/run_course.Rmd
@@ -82,11 +82,11 @@ knitr::include_graphics("img/tree_l1.png")
 * exercises (d)
     _ 코스의 연습문제를 정의하는 R 스크립트 파일 위치 
 * gatsby-browser.js
-    - 개츠비 앱 브라우징 설정 파일
+    - Gatsby 앱 브라우징 설정 파일
 * gatsby-config.js
-    - 개츠비 앱 설정 파일
+    - Gatsby 앱 설정 파일
 * gatsby-node.js
-    - 개츠비 앱 설정 파일
+    - Gatsby 앱 설정 파일
 * meta.json
     - 이네스 코스를 정의하는 메타정보 설정 파일
 * package-lock.json
@@ -96,7 +96,7 @@ knitr::include_graphics("img/tree_l1.png")
 * slides (d)
     - 코스의 슬라이드 컨텐츠를 정의하는 마크다운 문서 위치
 * src (d)
-    - 이네스 코스 플랫랫폼 구성 개츠비 소스 코드
+    - 이네스 코스 플랫랫폼 구성 Gatsby 소스 코드
 * static (d)
     - 이네스 코스 플랫폼에서 사용하는 정적 이미지 파일 위치
 * theme.sass
@@ -207,7 +207,7 @@ npm ERR! gyp ERR! node-gyp -v v3.8.0
 
 <br>
 
-개츠비에서 필요한 패키지를 `package.json` 파일에 기술합니다. 패키지 이름과 **version range**를 기술합니다. 패키지 의존성을 위한 선언인 `version range`는 버전의 범위를 의미합니다. 특정 버전을 의미하는 것은 아닙니다. 
+Gatsby에서 필요한 패키지를 `package.json` 파일에 기술합니다. 패키지 이름과 **version range**를 기술합니다. 패키지 의존성을 위한 선언인 `version range`는 버전의 범위를 의미합니다. 특정 버전을 의미하는 것은 아닙니다. 
 
 `package.json` 파일의 일부분인 다음의 ^2.0.17이 `version range`입니다. '^'로 시작하는 버전 번호 이후의 버전을 설치하라는 의미입니다. 2.0.17 버전을 설치하라는 의미는 아닙니다. 만약 패키지 배포 리파지토리의 'gatsby-plugin-manifest' 버전이 2.0.17라면 2.0.17 버전을 설치하지만, 새로운 버전이 패치되어 올라온 시점에서는 2.0.18 혹은 2.1.4와 같은 버전을 설치할 수도 있습니다.[^1] 
 
@@ -297,7 +297,7 @@ knitr::include_graphics("img/run-end.png")
 
 5개의 경고가 발생하였고 2개의 경고는 수정할 수 있다는 메시지가 있습니다만, 무시합니다.
 
-숙제가 남은 실행입니다. 경고 메시지를 수정하고 싶은 욕구는 충만하나 개츠비 개발자가 아니라, 일단은 무시하고 진행합니다. 
+숙제가 남은 실행입니다. 경고 메시지를 수정하고 싶은 욕구는 충만하나 Gatsby 개발자가 아니라, 일단은 무시하고 진행합니다. 
 
 ### 코스 템플리트 앱의 실행
 로컬 환경에 개발 서버가 구동되면 8000번 포트로 앱을 실행할 수 있습니다. 웹 브라우저에 다음 URL을 입력하여 템플리트 코스를 실행합니다.
@@ -322,6 +322,6 @@ knitr::include_graphics("img/intro-app.png")
 
 ### I can do it
 
-* 개츠비 어플리케이션을 실행할 수 있습니다.
+* Gatsby 어플리케이션을 실행할 수 있습니다.
 * 이네스 템플리트로 사용자 개발 환경을 만들 수 있습니다.
 
