--- a/understand_ines.Rmd
+++ b/understand_ines.Rmd
@@ -11,7 +11,7 @@ author:
   - name: 유충현 
     url: https://choonghyunryu.github.io/
     affiliation: Tidyverse Korea
-date: 2021-12-13 
+date: 2021-12-17
 ---
 
 ```{r setup, include=FALSE}
@@ -308,6 +308,7 @@ Markdown의 YAML 헤더는 다음과 같습니다.
 * <choice> : 선택형 퀴즈 정의
 * <codeblock> : 핸즈온 연습문제 정의
 
+<br>
 
 ### slides
 
@@ -369,9 +370,15 @@ velit nec, consectetur placerat enim.
 ::: {.panel}
 #### 랜더링된 슬라이드 노트 컨텐츠
 
-랜더링된 슬라이드 노트 화면의 일부입니다.
+랜더링된 슬라이드 노트 화면의 일부입니다. 코스를 숙강하는 수강자들이 데이터분석 이론이나 기술을 학습하는 영역입니다. 스크립트는 강사의 좀 더 구체적인 학습 내용의 설명 등을 기술할 수 있습니다.
+프리젠테이션 문서의 발표 스크립트 정도로 이해하시면 됩니다.
 
 ![슬라이드 노트 화면](img/slide-1.png)
+
+
+슬라이드 노트의 마지막 페이지 예제입니다.
+
+![슬라이드 노트 화면](img/slide-2.png)
 
 :::
 
@@ -386,12 +393,160 @@ Markdown의 YAML 헤더는 다음과 같습니다.
 #### 주요 Tags
 Markdown 태그를 지원하며, 다음의 추가 태그를 제공합니다.
 
-* ---- : 슬라이드 노트 페이지 구분자
+* \-\-\- : 슬라이드 노트 페이지 구분자
 * Notes: : 학습 내용을 설명하는 스크립트 정의
 * ```out : 출력을 정의하는 코드 청크
 
+<br>
+
 ### exercises
 exercises 디렉토리의 R 파일은 강의 연습문제(exercises)를 만들어 줍니다.
+
+연습문제인 exercises 디렉토리에는 하나의 연습문제를 위한 3개의 파일로 구성된 R 스크립트 파일이 위치합니다.
+
+챕터(chapter)의 Markdown 문서 중에서 **codeblock** 태그에 대응하는 파일은 파일 이름의 접두어로 그 기능이 구별됩니다. codeblock 태그의 **id** 속성이 포함된  R 스크립트 파일은 만들어야 됩니다.
+
+연습문제 아이디가 'first_exec'라 가정하면 codeblock 태그는 다음과 같이 정의합니다.
+
+````
+<codeblock id="first_exec">
+</codeblock>
+````
+
+* 연습문제 파일
+    - 확장자가 'exc_'인 파일
+    - exc_first_exec.R
+* 연습문제 해답 파일
+    - 확장자가 'solution_'인 파일
+    - solution_first_exec.R    
+* 연습문제 정답 검증 파일
+    - 확장자가 'test_'인 파일
+    - test_first_exec.R    
+
+
+이네스 플랫폼 텔플리트의 챕터 파일 포함된 연습문제 예제에는 다음 태그로, 연습문제는 '01_03'라는 아이디의 R 연습문제 파일들을 구동합니다.
+
+````
+<codeblock id="01_03">
+
+This is a hint.
+
+</codeblock>
+````
+
+<br>
+
+::: {.panelset}
+
+::: {.panel}
+
+#### 연습문제
+
+* exc_01_03.R
+
+```{r, echo=TRUE, eval=FALSE}
+library(ggplot2)
+
+mtcars$gear <- factor(mtcars$gear,levels=c(3,4,5),
+  	labels=c("3gears","4gears","5gears"))
+mtcars$am <- factor(mtcars$am,levels=c(0,1),
+  	labels=c("Automatic","Manual"))
+mtcars$cyl <- factor(mtcars$cyl,levels=c(4,6,8),
+   labels=c("4cyl","6cyl","8cyl"))
+
+# Print the gear variable of mtcars
+print(____)
+
+# Assign the length of mtcars to some_var
+some_var <- ____
+
+```
+
+:::
+
+::: {.panel}
+
+#### 연습문제 정답
+
+* solution_01_03.R
+
+```{r, echo=TRUE, eval=FALSE}
+library(ggplot2)
+
+mtcars$gear <- factor(mtcars$gear,levels=c(3,4,5),
+  	labels=c("3gears","4gears","5gears"))
+mtcars$am <- factor(mtcars$am,levels=c(0,1),
+  	labels=c("Automatic","Manual"))
+mtcars$cyl <- factor(mtcars$cyl,levels=c(4,6,8),
+   labels=c("4cyl","6cyl","8cyl"))
+
+# Print the gear variable of mtcars
+print(mtcars$gear)
+
+# Assign the length of mtcars to some_var
+some_var <- length(mtcars)
+```
+
+:::
+
+::: {.panel}
+
+#### 연습문제 검증
+
+* test_01_03.R
+
+```{r, echo=TRUE, eval=FALSE}
+test <- function() {
+    # Here we can either check objects created in the solution code, or the
+    # string value of the solution, available as .solution. See the testTemplate
+    # in the meta.json for details.
+    if (some_var != length(mtcars)) {
+        stop("Are you getting the correct length?")
+    }
+    if (!grepl("print(mtcars$gear)", .solution, fixed = TRUE)) {
+        stop("Are you printing the correct variable?")
+    }
+
+    # This function is defined in the testTemplate
+    success("Well done!")
+}
+```
+
+:::
+
+::: {.panel}
+
+#### 랜더링된 연습문제
+
+랜더링된 연습문제 화면의 일부입니다. 연습문제는 Binder와 연결되어 실행됩니다.
+
+다음 연습문제 화면은 여러 버튼을 통해서 연습문제의 수행을 진행합니다.
+
+![연습문제 화면](img/exec-exercise.png)
+
+
+**'Show solution'** 버튼으로 정답을 채운 뒤, **'Run Code'** 버튼으로 연습문제를 실행하면 R 스크립트를 실행합니다. 처음 연습문제를 실행하면 **mybinder.org**의 도커 컨테이너를 연결하는 메시지가 출력되면서 R을 실행할 수 있는 환경을 기다린 후 실행합니다. 제법 시간이 소요됩니다.  
+
+![연습문제의 실행](img/solution-exercise.png)
+
+연습문제를 실행한 결과입니다. 여기서 **'Submit'** 버튼을 누르면 **INPUT** 창의 스크립트의 정답 여부를 test_01_03.R 파일의 스크립트가 검증하여, 결과를 출력합니다.
+
+![연습문제의 실행 결과](img/test-exercise.png)
+
+:::
+
+:::
+
+## 결언
+
+이네스 플랫폼에 대해서 개괄적으로 살펴보았습니다. 
+
+데이터 분석을 위한, R을 위한 여러 학습서나 강의 교재, 온라인 문서가 넘칩니다. 그러나 학습의 효과를 고려한다면, 오프라인 강좌를 제외하면 온라인 대화형 학습의 성취도가 높다고 생각합니다.
+
+이네스 플랫폼은 온라인 대화형 학습을 지원하는 플랫폼으로, 공개형 코스 생태계를 만들어 나갈 유용한 자원이라 생각합니다. 이 플랫폼을 이용해서 유용한 온라인 코스 컨텐츠가 많이 만들어지는 것을 소망합니다.
+
+### 이네스 플랫폼 상세 소개
+이네스 플랫폼에서 코스 컨텐츠를 만들고, 배포하는 방법의 소개인 **"이네스 코스 개발하기"**를 참고하여, 유용한 온라인 대화형 코스를 만들어 보시기 바랍니다.
 
 
 
