--- a/run_course.Rmd
+++ b/run_course.Rmd
@@ -36,13 +36,13 @@ knitr::include_graphics("img/profile_ines.jpeg")
 div(class = "preface", 
     h4("들어가기"),
     "온라인 코스 실행해볼까요?!", br(),
-    "코스 플랫폼 템플리트는 템플리트일 뿐, 하나씩 만들어 넣어 내 코스를 생성해지요.", br(),
+    "코스 플랫폼 템플리트는 템플리트일 뿐, 하나씩 만들어 넣어 내 코스를 생성해야죠.", br(),
     "만들고 실행해서 동작해보고, 또 다시 만들고 실행하고...", br(),
     "이를 위해서 RStudio에서 생성한 코스를 실행하는 방법을 먼저 배워봅니다.")
 ```
 
 ## 코스 템플리트 둘러보기
-코스 플랫폼을 개발하기 위해서는 콘솔의 CLI(Command-line interface)에서의 작업이 필요합니다. 그러나 여기서는 별도의 터미널이 아닌 RStudio 안에서 모두 작업해보겠습니다.
+코스 플랫폼을 개발하기 위해서는 콘솔 CLI(Command-line interface)에서의 작업이 필요합니다. 그러나 여기서는 별도의 터미널이 아닌 RStudio 안에서 모두 작업해보겠습니다.
 
 ### 코스 플랫폼 프로젝트 구동
 
@@ -80,13 +80,13 @@ knitr::include_graphics("img/tree_l1.png")
 * chapters (d)
     - 코스의 챕터별 컨텐츠를 정의하는 마크다운 문서 위치
 * exercises (d)
-    _ 코스의 연습문제를 정의하는 R 스크립트 파일 위치 
+    - 코스의 연습문제를 정의하는 R 스크립트 파일 위치 
 * gatsby-browser.js
     - Gatsby 앱 브라우징 설정 파일
 * gatsby-config.js
     - Gatsby 앱 설정 파일
 * gatsby-node.js
-    - Gatsby 앱 설정 파일
+    - Gatsby의 Node.js 설정 파일
 * meta.json
     - 이네스 코스를 정의하는 메타정보 설정 파일
 * package-lock.json
@@ -119,7 +119,7 @@ knitr::include_graphics("img/tree_l2.png")
 ### Node.js 패키지 설치하기
 이네스가 배포한 템플리트로 만든 RStudio 프로젝트를 처음 구동한 후 Node.js 패키지를 설치합니다.
 
-운영체제 터미널 CLI 환경에서 설치해야 하지만, RStudio가 터미널을 지원하기 때문에 **"Colsole"** 패널의 **"Terminal"** 탭을 눌러 터미널을 엽니다. 그리고 다음의 명령을 입력합니다. 이미 앞에서 Node.js 패키지 설치 관리자인 npm을 설치했기 때문에 npm 명령어를 입력할 수 있습니다.
+운영체제 터미널 CLI 환경에서 설치해야 하지만, RStudio가 터미널을 지원하기 때문에 **"Console"** 패널의 **"Terminal"** 탭을 눌러 터미널을 엽니다. 그리고 다음의 명령을 입력합니다. 이미 앞에서 Node.js 패키지 설치 관리자인 npm을 설치했기 때문에 npm 명령어를 입력할 수 있습니다.
 
 ```{r npm-install, echo=TRUE, eval=FALSE}
 npm install
