--- a/run_course.Rmd
+++ b/run_course.Rmd
@@ -42,7 +42,7 @@ div(class = "preface",
 ```
 
 ## 코스 템플리트 둘러보기
-코스 플랫폼을 개발하기 위해서는 콘솔 CLI(Command-line interface)에서의 작업이 필요합니다. 그러나 여기서는 별도의 터미널이 아닌 RStudio 안에서 모두 작업해보겠습니다.
+코스 플랫폼을 개발하기 위해서는 콘솔 CLI(Command-line interface)에서의 작업이 필요합니다. 그러나 여기서는 별도의 터미널이 아닌, RStudio 안에서 모두 작업해보겠습니다.
 
 ### 코스 플랫폼 프로젝트 구동
 
